# yore

./: .babelrc  .eslintrc.js  .gitignore  .prettierrc.js  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  archive.js  build.rs  package.json  tsconfig.json  tslint.json  webpack.config.js
src/: cli.rs  common.rs  coordinate.rs  coordinates.rs  golo.rs  json.rs  kml.rs  lib.rs  main.rs  photo.rs  suggestion_accuracy.rs
src/golo/: json.rs  mod.rs
src/gui/: index.html  style.css
src/gui/js/: app.js  app.jsx  app.tsx  interfaces.ts  main-panel.js  main-panel.jsx  main-panel.tsx  map-area.js  map-area.jsx  map-area.tsx  page.jsx  page.tsx  photo-location-viewer.tsx  photo-thumbnail.jsx  photo-thumbnail.tsx  photo.js  photo.jsx  photo.tsx  photos-grid.tsx  pig-photo-thumbnail.tsx  requests.js  requests.ts  sidebar.jsx  sidebar.tsx
src/server/: error.rs  mod.rs  responses.rs  service.rs  uri.rs
src/tests/: fixture.rs
tests/assets/: location_history.json
tests/js/: main-panel.test.js  main-panel.test.jsx  main-panel.test.tsx  map-area.test.js  map-area.test.jsx  map-area.test.tsx  page.test.jsx  page.test.tsx  photo-location-viewer.test.tsx  photo-thumbnail.test.jsx  photo-thumbnail.test.tsx  photo.test.js  photo.test.ts  photos-grid.test.tsx  sidebar.test.jsx  sidebar.test.tsx
tests/js/__snapshots__/: main-panel.test.js.snap  main-panel.test.jsx.snap  main-panel.test.tsx.snap  map-area.test.js.snap  map-area.test.jsx.snap  map-area.test.tsx.snap  page.test.jsx.snap  page.test.tsx.snap  photo-location-viewer.test.tsx.snap  photo-thumbnail.test.jsx.snap  photo-thumbnail.test.tsx.snap  photo.test.ts.snap  photos-grid.test.tsx.snap  sidebar.test.jsx.snap  sidebar.test.tsx.snap
