[package]
name = "yore"
version = "1.0.0"
authors = ["Oliver Hamlet <oliver.hamlet@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4"
clap = "2"
futures = "0.1.14"
hyper = "0.11"
image = "0.18.0"
jpeg-decoder = "0.1.13"
memmap = "0.6"
kamadak-exif = "0.3"
rayon = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tinyfiledialogs = "3.0.4"
url = "1.6"
walkdir = "2"
web-view = "0.1.3"

[dev-dependencies]
tempdir = "0.3"

[[bin]]
name = "yore"
path = "src/bin/main.rs"

[[bin]]
name = "yore-webview"
path = "src/bin/webview.rs"
