[package]
name = "yore"
version = "1.0.0"
authors = ["Oliver Hamlet <oliver.hamlet@gmail.com>"]
license = "MIT"
build = "build.rs"

[dependencies]
chrono = "0.4"
clap = "2"
futures = "0.1.14"
hyper = "0.11"
image = "0.19.0"
jpeg-decoder = "0.1.13"
memmap = "0.6"
kamadak-exif = "0.3"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tinyfiledialogs = "3.0.4"
url = "1.6"
walkdir = "2"
web-view = "0.2.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
svg_to_ico = "0.1"
winres = "0.1"

[[bin]]
name = "yore"
path = "src/bin/main.rs"

[[bin]]
name = "yore-webview"
path = "src/bin/webview.rs"
